// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kpi-alarms-chart Renders \`kpi-alarms-chart\` with all types by month 2`] = `
<div>
  <div
    class=""
  >
    <canvas
      height="440"
      id="bar-chart"
      style="display: block; box-sizing: border-box; user-select: none; webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 440px; width: 600px;"
      width="600"
    />
  </div>
  <chart-export-actions-stub
    chart="[object Object]"
    class="mt-4"
  />
</div>
`;

exports[`kpi-alarms-chart Renders \`kpi-alarms-chart\` with downloading true 1`] = `
<div>
  <div
    class=""
  >
    <canvas
      height="440"
      id="bar-chart"
      style="display: block; box-sizing: border-box; user-select: none; webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); height: 440px; width: 600px;"
      width="600"
    />
  </div>
  <chart-export-actions-stub
    chart="[object Object]"
    class="mt-4"
    downloading="true"
  />
</div>
`;
